Bug 153107 - The background image of the pasted object changes after saving to PPTX
Summary: The background image of the pasted object changes after saving to PPTX
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: OOXML-Shapes Area-Fill-Tab-Image
  Show dependency treegraph
 
Reported: 2023-01-19 12:07 UTC by NISZ LibreOffice Team
Modified: 2023-03-03 10:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (15.64 KB, application/vnd.oasis.opendocument.presentation)
2023-01-19 12:10 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (392.61 KB, image/png)
2023-01-19 12:11 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-01-19 12:07:25 UTC
Description:
In Impress, the background image of the embedded object is modified. The scale value in the Area menu becomes inactive after saving to PPTX. 

Steps to Reproduce:
1: Opening the example file
2: Area -> Image -> Options -> Scale
3: Make Scale active 
4: Save in PPTX
5: File -> Reload

Actual Results:
After saving, the Scale value will be inactive.

Expected Results:
After saving, the Scale value will remain active.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fc441f3886330c4ae2abeb67c0758b935ba23f47
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-01-19 12:10:35 UTC
Created attachment 184779 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2023-01-19 12:11:09 UTC
Created attachment 184780 [details]
Screenshot of the problem
Comment 3 stragu 2023-01-19 13:11:58 UTC
Reproduced in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d04c197b436094844abfa5fb7c12e095165d2bca
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_AU.UTF-8); UI: en-US
Calc: threaded

The scale values go from percentages in ODP to absolute values in PPTX, "scale" unticked.

Already in:

Version: 6.1.0.3
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-AU (en_AU.UTF-8); Calc: group threaded
Comment 4 Commit Notification 2023-01-26 19:49:49 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e8335bac5690b6beccb5ca9b36281c89fb2f28f5

tdf#153107 OOXML export: fix scale of tile of shape background

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2023-01-30 09:18:45 UTC
Tibor, I just tested the fix and can see that the image looks the same now when saved as PPTX, thanks! However, it still uses absolute values instead of keeping the "scale" mode. (Ticking the "scale" setting loses the values and resets it to 100%.)
Should there be a follow-up to also keep the scale setting on?

Side note: when opening the PPTX with MS PowerPoint:
- Pre-fix: tiled, scale X 215.4%, scale Y 187.4%
- Post-fix: tiled, scale X 123.8%, scale Y 94.8%

Looks like MS Office uses a different reference size to calculate the scale? And *only* uses scales, no absolute value option?

Microsoft® PowerPoint for Microsoft 365 MSO (Version 2212 Build 16.0.15928.20196) 64-bit 

(Issue was already in 6.0, although in a different way: scale setting could not be unticked for Tiled mode, and values were changed but still in percentage:
Version: 6.0.0.3
Build ID: 64a0f66915f38c6217de274f0aa8e15618924765
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-AU (en_AU.UTF-8); Calc: group)
Comment 6 NISZ LibreOffice Team 2023-01-31 07:31:28 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec4babad021218b75dfe8534985d7db525edde69
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 7 Gabor Kelemen (Collabora) 2023-02-21 00:02:03 UTC
(In reply to Stéphane Guillou (stragu) from comment #5)
> Should there be a follow-up to also keep the scale setting on?
> 
I'd say yes, if it's easy to handle at import-export time.

> Side note: when opening the PPTX with MS PowerPoint:
> - Pre-fix: tiled, scale X 215.4%, scale Y 187.4%
> - Post-fix: tiled, scale X 123.8%, scale Y 94.8%
> 
> Looks like MS Office uses a different reference size to calculate the scale?
> And *only* uses scales, no absolute value option?
> 
See my older comment: https://bugs.documentfoundation.org/show_bug.cgi?id=152070#c3
Comment 8 stragu 2023-03-03 10:07:02 UTC
(In reply to Gabor Kelemen (allotropia) from comment #7)
> (In reply to Stéphane Guillou (stragu) from comment #5)
> > Should there be a follow-up to also keep the scale setting on?
> > 
> I'd say yes, if it's easy to handle at import-export time.
> 
 See bug 153937.